apps/headwind-mdm/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headwind-mdm
  labels:
    app: headwind-mdm
